@@ -2,17 +2,16 @@ package org.example.tm66.mapper;
 
 import lombok.AccessLevel;
 import lombok.NoArgsConstructor;
+import org.apache.logging.log4j.util.Strings;
 import org.example.tm66.model.RowDto;
 import org.example.tm66.model.Task;
 import org.example.tm66.model.TaskStatus;
-import org.example.tm66.processor.WorkValidator;
-import org.example.tm66.processor.Normalizer;
 import org.example.tm66.processor.Locations;
+import org.example.tm66.processor.Normalizer;
+import org.example.tm66.processor.WorkValidator;
 
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
+import java.util.stream.Collectors;
 
 import static org.apache.logging.log4j.util.Strings.isBlank;
 import static org.apache.logging.log4j.util.Strings.isNotBlank;
@@ -27,10 +26,13 @@ public class TaskMapper {
 
     private static final Map<String, String> COMMENT_MAP = new HashMap<>();
 
-    private static final Set<String> FILTERED_WORKS = Set.of(
-            "Легковой выезд в тт",
-            "Грузовой выезд в тт (монтаж/демонтаж)"
-    );
+    private static final Set<String> FILTERED_WORKS =
+            Collections.unmodifiableSet(
+                    new HashSet<>(Arrays.asList(
+                            "Легковой выезд в тт",
+                            "Грузовой выезд в тт (монтаж/демонтаж)"
+                    ))
+            );
 
     public static void init() {
         COMMENT_MAP.clear();
@@ -42,14 +44,13 @@ public class TaskMapper {
                 .filter(row -> row.getVolume() > 0)
                 .filter(row -> !FILTERED_WORKS.contains(row.getWorkGroup()))
                 .map(TaskMapper::map)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public static Task map(RowDto row) {
         Task task = new Task();
         task.setCreatAt(row.getCreateDate());
 
-        normalize(row);
         enrich(row);
         trimTrash(row);
         separateWarehouse(row);
@@ -57,8 +58,19 @@ public class TaskMapper {
         task.setOrderId(row.getOrderId());
         task.setUrl(row.getOrderLink());
 
-        task.setCity(row.getCity());
-        task.setLocation(Locations.getLocation(row.getCity()));
+        String city = row.getCity();
+        String address = row.getAddress();
+        if (Strings.isBlank(city)) {
+            city = extractCity(address);
+            address = address.substring(city.length() + 1).trim();
+        }
+
+        String normalizeCity = Normalizer.normalizeCity(city);
+        task.setCity(normalizeCity);
+        task.setLocation(Locations.getLocation(normalizeCity));
+
+        String normalizeAddress = Normalizer.normalizeAddress(address, task.getCity());
+        task.setAddress(normalizeAddress);
 
         String workGroup = row.getWorkGroup();
         task.setWork(isNotBlank(workGroup) ? workGroup : row.getOrderType());
@@ -74,9 +86,6 @@ public class TaskMapper {
         String equipment = row.getEquipment();
         task.setEquipment(isNotBlank(equipment) ? equipment : "оборудование не указано");
 
-        String address = Normalizer.normalizeAddress(row.getAddress(), task.getCity());
-        task.setAddress(address);
-
         task.setTargetDate(row.getTargetDate());
 
         task.setComment(COMMENT_MAP.getOrDefault(row.getOrderId(), buildAndSaveComment(row)));
@@ -91,9 +100,9 @@ public class TaskMapper {
         return task;
     }
 
-    private static void normalize(RowDto row) {
-        String normalize = Normalizer.normalizeCity(row.getCity());
-        row.setCity(normalize);
+    private static String extractCity(String address) {
+        int index = address.indexOf(",");
+        return address.substring(0, index).trim();
     }
 
     private static void enrich(RowDto row) {
@@ -149,14 +158,14 @@ public class TaskMapper {
         boolean jtiCommentNotBlank = isNotBlank(jtiComment);
         if (jtiCommentNotBlank) jtiComment = "JTI:" + lineSeparator + jtiComment;
 
-        if (jtiCommentNotBlank && !sb.isEmpty()) sb.append(lineSeparator);
+        if (jtiCommentNotBlank && sb.length() > 0) sb.append(lineSeparator);
         sb.append(jtiComment);
 
         String executorComment = row.getExecutorComment();
         boolean executorCommentNotBlank = isNotBlank(executorComment);
         if (executorCommentNotBlank) executorComment = "ИНФОРМАЦИЯ:" + lineSeparator + executorComment;
 
-        if (executorCommentNotBlank && !sb.isEmpty()) sb.append(lineSeparator);
+        if (executorCommentNotBlank && sb.length() > 0) sb.append(lineSeparator);
         sb.append(executorComment);
 
         String comment = sb.toString();
